@@ -48,6 +48,7 @@
 			<label index="list.report.rowdeleted">###title### row deleted.</label>
 			<label index="list.report.rownotexisting">###title### row doesn't exist.</label>
 			<label index="list.report.noresponse">External Link not reachable.</label>
+			<label index="list.report.redirectloop">A redirect loop occurred. (%s: %s)</label>
 			<label index="list.report.pagenotfound404">The requested url was not found (404).</label>
 			<label index="list.report.pageforbidden403">Accessing this address is not allowed (403).</label>
 			<label index="list.report.externalerror">External Link returned HTTP error code (%s).</label>
